--- a/src/views/admin/provider-admin.html
+++ b/src/views/admin/provider-admin.html
@@ -1,4 +1,4 @@
-{include="../shared/header/header"}
+{include="../shared/Header/header"}
 
 <section id="fornecedor">
   <div class="container">
@@ -256,4 +256,4 @@
     return new bootstrap.Tooltip(tooltipTriggerEl);
   });
 </script>
-{include="../shared/footer/footer"}
+{include="../shared/Footer/footer"}
