--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,3 +1,3 @@
-{include="shared/header/header"} 
+{include="shared/Header/header"} 
 {include="home"}
-{include="shared/footer/footer"}
+{include="shared/Footer/footer"}
