--- a/src/views/product-detail.html
+++ b/src/views/product-detail.html
@@ -1,4 +1,5 @@
-{include="shared/header/header"}
+{include="shared/Header/header"}
+
 <!--========PRODUTOS=========-->
 <section id="produtos">
   <div class="container">
@@ -167,4 +168,4 @@
   </div>
 </section>
 <!--========PRODUTOS=========-->
-{include="shared/footer/footer"}
+{include="shared/Footer/footer"}
