--- a/src/views/profile-provider.html
+++ b/src/views/profile-provider.html
@@ -1,4 +1,5 @@
-{include="shared/header/header"}
+{include="shared/Header/header"}
+
 <section id="banner-vendedor">
   <div class="img-banner-vendedor"></div>
   <div class="img-vendedor">
@@ -188,4 +189,4 @@
     </li>
   </ul>
 </nav>
-{include="shared/footer/footer"}
+{include="shared/Footer/footer"}
