add news layout from auth update layout

--- a/src/views/shared/Header/header.html
+++ b/src/views/shared/Header/header.html
@@ -58,7 +58,7 @@
       <li class="nav-item">
         <a
           class="nav-link btn btn-warning btn-conta"
-          href="#"
+          href="create-account"
           style="padding: 10px 30px"
           >Criar conta</a
         >
