register client and validate errors

--- a/src/views/register.html
+++ b/src/views/register.html
@@ -34,8 +34,13 @@
   <div>
     <div class="container">
       <div class="login">
-        <div class="form" action="" method="post">
-          <form class="needs-validation" novalidate>
+        <div class="form">
+          <form
+            action="create"
+            method="post"
+            class="needs-validation"
+            novalidate
+          >
             <div
               class="form-group"
               style="
@@ -49,11 +54,30 @@
             <h3 style="color: white; margin-bottom: 20px">
               Criar conta cliente
             </h3>
+
+            {if="$status_code !== 0"}
+
+              {if="$status_code === 200"}
+            
+              <p style="color: green">Cadastrado com sucesso!</p>
+            
+              {elseif="$status_code === 23000"}
+            
+              <p style="color: red">Usuário já existe!</p>
+            
+              {else}
+            
+              <p style="color: red">Ocorreu um erro, tente novamente!</p>
+            
+              {/if}
+            {/if}
+
             <div class="form-row">
               <div class="col-md-12 mb-3">
                 <label for="validationCustom01">Nome</label>
                 <input
                   type="text"
+                  name="name"
                   class="form-control"
                   id="validationCustom01"
                   placeholder="Digite seu nome"
@@ -68,6 +92,7 @@
                 <label for="validationCustom02">Contacto</label>
                 <input
                   type="text"
+                  name="contact"
                   class="form-control"
                   id="validationCustom02"
                   placeholder="Ex: (+244) 935 160 487"
@@ -84,6 +109,7 @@
                 <label for="validationCustom02">Email</label>
                 <input
                   type="text"
+                  name="email"
                   class="form-control"
                   id="validationCustom02"
                   placeholder="Digite seu email.."
