--- a/src/assets/css/cadastrar_vendedor.css
+++ b/src/assets/css/cadastrar_vendedor.css
@@ -1,95 +1,87 @@
-*{
-    
-    font-family: Arial, Helvetica, sans-serif;
-    
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
-#menu{
-    background-color: #24252D !important;
-    border-bottom: 1px solid #2A2D3A;
+#menu {
+  background-color: #24252d !important;
+  border-bottom: 1px solid #2a2d3a;
 }
-#cadastrar{
-    width: 100%;
-    
-    background: #24252D;
+#cadastrar {
+  width: 100%;
+
+  background: #24252d;
 }
-#cadastrar i{
-    font-size: 5rem;
-    color: #ccc !important;
-    margin-top: 15px;
-    
+#cadastrar i {
+  font-size: 5rem;
+  color: #ccc !important;
+  margin-top: 15px;
 }
-#cadastrar div.icon{
-    border: none;
-    border-radius: 60%;
-    width: 80px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#cadastrar div.icon {
+  border: none;
+  border-radius: 60%;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#cadastrar input[type="file"]{
-    background:  url('../css/uicons-regular-rounded/uicons-regular-rounded/svg/fi-rr-user-add.svg')no-repeat!important;
-    width: 150px;
-    height: 150px;
-    color: transparent;
-    border-radius: 20%;
-    
-    font-size: 0%;
-    background-position: center;
-    background-size: contain !important;
+#cadastrar input[type="file"] {
+  background: url("../css/uicons-regular-rounded/uicons-regular-rounded/svg/fi-rr-user-add.svg")
+    no-repeat !important;
+  width: 150px;
+  color: transparent;
+  border-radius: 20%;
+
+  font-size: 0%;
+  background-position: center;
+  background-size: contain !important;
 }
-label[for="foto"]{
-    color: #fff;
-    margin-top: 10px;
-    transition: all 2s;
-    
+label[for="foto"] {
+  color: #fff;
+  margin-top: 10px;
+  transition: all 2s;
 }
-label[for="foto"]:hover{
-    cursor: pointer;
-    text-decoration: underline;
+label[for="foto"]:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
-div .container .cadastrar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin-top: 10px;
-    background-color: #24252D;
+div .container .cadastrar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin-top: 10px;
+  background-color: #24252d;
 }
-.container .cadastrar .form{
-    background-color: #2A2D3A;
-    width: 600px;
-    
-    border-radius: 10px;
-    padding: 40px 30px;
-    margin: 20px auto;
-    
+.container .cadastrar .form {
+  background-color: #2a2d3a;
+  width: 600px;
+
+  border-radius: 10px;
+  padding: 40px 30px;
+  margin: 20px auto;
 }
-#cadastrar .form-group{
-    margin: 20px 0px;
+#cadastrar .form-group {
+  margin: 20px 0px;
 }
-#cadastrar .form-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#cadastrar .form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#cadastrar .btn-login{
-    padding: 10px 30px !important;
-    margin: 0px auto;
+#cadastrar .btn-login {
+  padding: 10px 30px !important;
+  margin: 0px auto;
 }
-#cadastrar input[type="text"]{
-    background-color: #24252D !important;
-    color: #ccc;
+#cadastrar input[type="text"] {
+  background-color: #24252d !important;
+  color: #ccc;
 }
-#cadastrar label{
-    color: #ccc;
+#cadastrar label {
+  color: #ccc;
 }
 
-footer{
-    margin-top: 80px;
+footer {
+  margin-top: 80px;
 }
-
-
-
