--- a/src/assets/css/estilo.css
+++ b/src/assets/css/estilo.css
@@ -42,6 +42,10 @@ nav a:hover {
   margin-left: 50px;
 }
 
+#image {
+  height: 200px;
+}
+
 #barra {
   background-color: #2a2d3a;
   border-radius: 10px;
@@ -154,7 +158,7 @@ nav a:hover {
   margin-top: 0px !important;
   margin-bottom: 50px;
   width: 100%;
-  height: 80vh;  
+  height: 80vh;
 }
 
 #banner .img-banner {
@@ -166,7 +170,7 @@ nav a:hover {
   margin: 60px 0px;
   padding: 80px 20px;
   display: flex;
-  align-items: center;  
+  align-items: center;
 }
 
 #banner .img-banner h1 {
@@ -189,7 +193,7 @@ nav a:hover {
   padding: 10px 0px;
   position: relative;
 }
- a{
+a {
   color: #fff !important;
 }
 
@@ -278,38 +282,36 @@ nav a:hover {
   background: #24252d;
   color: #fff;
 }
-#produtos > .container > div{
+#produtos > .container > div {
   background-color: var(--body);
 }
 
-#produtos .card-container{
-  
+#produtos .card-container {
 }
-#produtos .row{
+#produtos .row {
   flex-wrap: nowrap;
 }
-#produtos .card-body{
-  padding: 0px ;
+#produtos .card-body {
+  padding: 0px;
 }
-#produtos .card-info{
+#produtos .card-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 0px;
 }
-.card{
+.card {
   margin: 10px;
   background-color: var(--card);
   border-radius: 10px;
 }
-#produtos img{
+#produtos img {
   width: 300px;
   height: 310px;
   border-radius: 10px;
   margin: 10px auto;
 }
-#produtos .price{
- 
+#produtos .price {
 }
 #produtos .lista-produtos {
   background: #24252d;
