--- a/src/views/admin/provider-admin.html
+++ b/src/views/admin/provider-admin.html
@@ -44,15 +44,19 @@
 </section>
 
 <!------------PRODUTOS------------------->
-<section id="" class="" style="margin-top: 20px !important; margin-bottom: 0px">
+<!------------PRODUTOS------------------->
+<section
+  id=""
+  class=""
+  style="margin-top: 20px !important; margin-bottom: 0px"
+>
   <div class="container">
     <div class="lista-produtos">
       <div class="row">
         <input
-          class="form- col-md-8"
+          class="form-control col-sm-12 col-md-8 my-1 mx-3 ml-3"
           style="
-            margin-left: 28px;
-            margin-right: 18px;
+            
             padding: 5px 10px;
             border-radius: 10px;
           "
@@ -62,10 +66,11 @@
           placeholder="Pesquisar por produtos"
         />
         <select
-          class="col-md-3"
+          class="form-control col-sm-12 col-md-3 my-1 mr-2 ml-3"
           name=""
           id=""
           style="
+            
             color: #fff;
             border: none;
             padding: 5px 10px;
@@ -78,154 +83,124 @@
           <option value="2">Calsados</option>
         </select>
       </div>
-      <!------------PRODUTOS------------------->
-      <section id="produtos" style="margin-top: 10px">
-        <div class="container">
-          <div class="row d-flex justify-content-center">
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info d-flex align-items-center">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
+     <!------------PRODUTOS------------------->
+<!------------PRODUTOS------------------->
+<div class="container">
+  <div class="row ">
+      <div class="card-container col-12 col-sm-6 col-md-4 col-lg-3 d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid "  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
             </div>
           </div>
-          <div class="row d-flex justify-content-center">
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
-            </div>
-            <div class="card col-sm-12 col-md-3" style="width: 18rem">
-              <a href="#">
-                <img
-                  class="card-img-top"
-                  src="src/assets/images/vestuarios/casaco-amarelo.jpg"
-                  alt="Imagem de capa do card"
-                />
-              </a>
-              <div class="card-body">
-                <p class="card-text">Casaco Amarelo</p>
-              </div>
-              <div class="card-info">
-                <p class="card-text"><a href="#">Desactivar</a></p>
-                <p class="card-text"><a href="#">Editar</a></p>
-                <p class="card-text"><a href="#">Eliminar</a></p>
-              </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
             </div>
           </div>
-        </div>
-      </section>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+      <div class="card-container col-12 col-sm-6 col-md-4 col-lg-3 d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <a href="#">Desactivar</a>
+              <a href="#">Editar</a>
+              <a href="#" class="">Eliminar</a>
+            </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+
     </div>
   </div>
 </section>
+<!------------PRODUTOS------------------->
+
 <!------------PRODUTOS------------------->
 
 <!--==============PAGINAÇÃO==============-->
