--- a/src/views/shared/Header/header.html
+++ b/src/views/shared/Header/header.html
@@ -25,7 +25,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <form id="barra" action="" method="get" style="box-sizing: border-box">
-      <button class="btn-barra-pesquisa"><i class="fi-rr-search"></i></button>
+      <button class="btn-barra-pesquisa"><i class="fab fa-search"></i></button>
       <input
         class="input-barra-pesquisa"
         type="text"
