--- a/src/assets/css/produtos.css
+++ b/src/assets/css/produtos.css
@@ -8,14 +8,76 @@
 img{
     max-width: 100%;
 }
-
+   #detalhe-produtos{
+        margin-top: 70px;
+        margin-bottom: 90px;
+        color: #fff;
+        
+        
+      
+    }
+    #detalhe-produtos > .container .img-produto{
+        border-right: none;
+       
+        height: 90vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #detalhe-produtos > .container .info-produto{
+    
+        margin: 0px auto;
+    
+        height: 70vh;
+    }
+    #detalhe-produtos > .container .info-produto .nome-produto{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #detalhe-produtos > .container .info-produto .txt-produto{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #detalhe-produtos > .container .info-produto .foto-vendedor{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    #detalhe-produtos > .container .info-produto .descricao{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #detalhe-produtos > .container .info-produto .descricao-produto{
+        max-width: 500px;
+        margin: 10px auto;
+    }
+    #detalhe-produtos > .container .info-produto .btn-produto{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0px auto;
+    }
+    #detalhe-produtos > .container .info-produto .btn-produto{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      
+    }
 .input-pesquisa{
     border: none !important;
     padding-right: 100px !important;
 }
 
-
-#produtos > .container .img-produto{
+#detalhe-produtos{
+    color: #fff;
+}
+#detalhe-produtos > .container .img-produto{
     border-right: 1px solid #474747;
    
     height: 90vh;
@@ -23,48 +85,48 @@ img{
     justify-content: center;
     align-items: center;
 }
-#produtos > .container .img-produto img{
+#detalhe-produtos > .container .img-produto img{
     max-width: 400px;
     max-height: 460px;
     border-radius: 10px;
 }
-#produtos > .container .info-produto .nome-produto{
+#detalhe-produtos > .container .info-produto .nome-produto{
     display: flex;
     align-items: center;
 }
-#produtos > .container .info-produto .nome-produto a{
+#detalhe-produtos > .container .info-produto .nome-produto a{
     border: #474747 1px solid !important;
     color: #fff;
     padding: 2px 10px !important;
     margin: 0px 10px;
 }
-#produtos > .container .info-produto .foto-vendedor{
+#detalhe-produtos > .container .info-produto .foto-vendedor{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 }
-#produtos > .container .info-produto .foto-vendedor img{
+#detalhe-produtos > .container .info-produto .foto-vendedor img{
     border-radius: 50%;
     width: 100px;
     height: 100px;
     margin-right: 10px;
 }
-#produtos > .container .info-produto .descricao{
+#detalhe-produtos > .container .info-produto .descricao{
     display: flex;
     align-items: center;
 }
-#produtos > .container .info-produto .descricao p{
+#detalhe-produtos > .container .info-produto .descricao p{
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 20px;
 }
-#produtos > .container .info-produto .btn-produto{
+#detalhe-produtos > .container .info-produto .btn-produto{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 3px;
 }
-#produtos > .container .info-produto .btn-produto button{
+#detalhe-produtos > .container .info-produto .btn-produto button{
     text-align: center;
     margin: 10px;
 }
@@ -231,9 +293,11 @@ img{
 
     color: #fff;
 }
+.product-detail{
+    flex-wrap: wrap !important;
+}
 
-
-/*--------Botões do menu---------------*/
+/*--------Botões do menu MODAÇ---------------*/
 
 .btn{
     margin: 0px 5px;
@@ -271,63 +335,7 @@ img{
 }
 
 
-/*--------Botões do menu---------------*/
-
-.btn{
-    margin: 0px 5px;
-}
-.btn-comprar{
-    background: linear-gradient(50deg, #eb1484, #d01bb6);
-    -webkit-background: linear-gradient(50deg, #eb1484, #d01bb6);
-    -moz-background: linear-gradient(50deg, #eb1484, #d01bb6);
-    color: var(--branco) ;
-    color: #fff !important;
-    padding: 10px 30px !important;
-    border: none;
-    transition: background .2s;
-}
-.btn-comprar:hover{
-    background: linear-gradient(50deg, #d01bb6, #eb1484);
-    -webkit-background: linear-gradient(50deg, #d01bb6, #eb1484);
-    -moz-background: linear-gradient(50deg, #d01bb6, #eb1484);
-}
-
-.btn-adicionar{
-    padding: 10px 0px !important;
-    color: #eb1484 !important;
-    background: none !important;
-    border: 1px solid #eb1484;
-    transition: all .2s linear;
-}
-
-.btn-adicionar:hover{
-    background: linear-gradient(50deg, #d01bb6, #eb1484) !important;
-    -webkit-background: linear-gradient(50deg, #d01bb6, #eb1484);
-    -moz-background: linear-gradient(50deg, #d01bb6, #eb1484);
-    transition: all .2s linear;
-    color: #fff !important;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*--------RODAPE---------------*/
 
 footer{
     margin-top: 50px !important;
@@ -339,7 +347,7 @@ footer ul{
 }
 @media(max-width: 992px){
     #produtos{
-        margin-top: 70px;
+        margin-top: 0px;
         margin-bottom: 180px;
         color: #fff;
         
