--- a/src/views/home.html
+++ b/src/views/home.html
@@ -46,120 +46,113 @@
 <!--vendedores-->
 
 <!------------PRODUTOS------------------->
-<section id="produtos">
-  <div class="container">
-    <div class="row d-flex justify-content-center">
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+<div class="container">
+  <div class="row ">
+      <div class="card-container col-12 col-sm-6 col-md-4 col-lg-3 d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid "  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-     
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="card-container col-12 col-sm-6 col-md-4 col-lg-3 d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-      <div class="card col-sm-12 col-md-3" style="width: 18rem;">
-        <a href="#">
-          <img class="card-img-top" src="src/assets/images/vestuarios/casaco-amarelo.jpg" alt="Imagem de capa do card">
-        </a>
-        <div class="card-body">
-          <p class="card-text">Casaco Amarelo</p>
-        </div>
-        <div class="card-info">
-          <p class="card-text">1,25kz</p>
-          <p class="card-text"><a href="#"><i class="fi-rr-heart"></i></a>92</p>
-          <a href="#" class="btn btn-login">Comprar</a>
-        </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 card-container d-flex flex-column justify-content-center align-items-center">
+          <div class="pro d-flex flex-column justify-content-center">
+              <a href="produtos.html">
+              <img class="img-fluid"  src="src/assets/images/vestuarios/casaco-amarelo.jpg">
+            </a>
+            <span class="nome-produto">Camisolas</span>
+            <div class="info-produto my-2">
+              <p><span class="preco">15.000kz</span></p>
+              <p><i class="fi-rr-heart">307</i></p>
+              <a href="#" class="btn btn-md btnComprar">Comprar</a>
+            </div>
+          </div>
       </div>
-     
-    </div>
-    
   </div>
-</section>
+</div>
 
 
